--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "JPIN_BOT",
+  "name": "jpin_bot",
   "productName": "JPIN_BOT",
-  "version": "2.3.0",
+  "version": "2.3.1",
   "description": "Twitch chat bot",
-  "main": "login.js",
+  "main": "interface.js",
   "scripts": {
-    "start": "electron login.js",
+    "start": "electron interface.js",
+    "pack": "electron-builder --dir",
     "dist": "electron-builder"
   },
   "repository": "https://github.com/JPTRON/JPIN_BOT",
@@ -13,27 +14,39 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.1",
-    "electron-compile": "^6.4.4",
+    "dialogs": "^2.0.1",
+    "electron-compile": "^3.3.6",
+    "electron-find": "^1.0.6",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
     "fs": "0.0.1-security",
-    "handlebars": "^4.7.6",
+    "handlebars": "^4.7.7",
+    "http": "^0.0.1-security",
+    "jquery": "^3.6.0",
+    "node-fetch": "^2.6.2",
     "path": "^0.12.7",
     "request": "^2.88.2",
-    "tmi.js": "^1.5.0",
+    "socket.io": "^4.2.0",
+    "socket.io-client": "^4.2.0",
+    "tmi.js": "^1.8.3",
     "translate-google": "^1.3.5",
     "url": "^0.11.0"
   },
   "devDependencies": {
-    "electron": "^10.3.2",
+    "electron": "^16.0.4",
     "electron-builder": "^22.9.1",
-    "electron-prebuilt-compile": "8.2.0"
+    "electron-prebuilt-compile": "^1.3.2"
   },
   "build": {
     "appId": "com.jptron.jpin_bot.app",
-    "asar" : "false",
+    "asar": "false",
     "win": {
-      "target": "NSIS"
+      "target": ["nsis"]
+    },
+    "nsis": {
+      "uninstallDisplayName": "JPIN_BOT",
+      "oneClick": false,
+      "allowToChangeInstallationDirectory": true
     }
   }
 }
